--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
